--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Nitin Portfolio </title>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Barlow:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&family=Bungee:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
